tests/fixtures/errors/e0808_or_arm_different_names.mimz
// expect: E0808
enum Op { Add(a: bits[8], b: bits[8]), Mul(x: bits[16]) }
module M {
  in cmd: Op
  out o: bits[8]
  o = match cmd {
    Op.Add(a, b), Op.Mul(x) => a
    _ => 0
  }
}
